[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Chest/Chest.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Interactable.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Chest/Chest.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 21, 18 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 21, 18 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Open"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 9 )

[sub_resource type="CircleShape2D" id=9]
radius = 21.0

[node name="Chest" type="StaticBody2D"]
position = Vector2( 0, -8 )
collision_layer = 2147483649
collision_mask = 2147483648
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Animate"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Open = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 8 )

[node name="Interactable2" parent="." instance=ExtResource( 2 )]
collision_mask = 2147483648

[node name="CollisionShape2D" parent="Interactable2" index="0"]
shape = SubResource( 9 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Interactable2" to="." method="_on_Interactable2_area_entered"]
[connection signal="area_exited" from="Interactable2" to="." method="_on_Interactable2_area_exited"]

[editable path="Interactable2"]
